--- a/ansible_kube.yml
+++ b/ansible_kube.yml
@@ -3,9 +3,7 @@
   become: true
   
   tasks:
-  - name: run kubectl common on kube master machine
-    command: "kubectl apply -f pod-01.yml"
   - name: create file
     file:
-    dest: /root/file1.txt
+    dest: /home/ec2-user/file1.txt
     state: touch
