--- a/ansible_kube.yml
+++ b/ansible_kube.yml
@@ -8,6 +8,11 @@
       dest: /home/ec2-user/file1.txt
       state: touch
    
+  - name: move file
+    copy:
+    src: pod-01.yml
+    dest: /home/ec2-user/pod-01.yml
+    
   - name: run kubectl command
     command: kubectl apply -f pod-01.yml
     
