--- a/playbook.yml
+++ b/playbook.yml
@@ -1,6 +1,12 @@
+---
 - hosts: localhost
   connection: local
-  
+
   tasks:
+    - name: run ansible command
+      file:
+       path: /home/edureka/sanjeev/gitfile.txt
+       state: touch
+
     - name: run kubernet pod task
       command: kubectl apply -f pod-01.yml
