--- a/playbook_1.yml
+++ b/playbook_1.yml
@@ -9,4 +9,4 @@
        state: touch
 
     - name: run kubernet pod task
-      command: kubectl apply -f pod-01.yml
+      command: "kubectl apply -f pod-01.yml"
